2014-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-shell-completion-get-completions):
	Use python-shell--prompt-calculated-input-regexp from the
	process buffer (bug#18582).
	Don't assume that `line' comes from the process buffer.

2014-09-30  Leonardo Nobrega  <leonobr@gmail.com>  (tiny change)

	* progmodes/python.el (python-fill-paren): Don't inf-loop at EOB
	(bug#18462).

2014-09-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-check-signature): Default to nil if
	GPG is not available.
	(package-refresh-contents): Don't mess with the keyring if we won't
	check the signatures anyway.

2014-09-18  Kan-Ru Chen  <kanru@kanru.info>

	* window.el (fit-window-to-buffer): When counting buffer width,
	count the whole visible buffer.  Correctly convert the body-height
	to pixel size for window-text-pixel-size (Bug#18498).

2014-09-14  Glenn Morris  <rgm@gnu.org>

	* image.el (image-multi-frame-p): Fix thinko - do not force
	a delay if none was specified.  (Bug#18334)

2014-09-12  Kan-Ru Chen  <kanru@kanru.info>

	* window.el (fit-window-to-buffer): Doc fix.

2014-09-10  Ivan Shmakov  <ivan@siamics.net>  (tiny change)

	* desktop.el (desktop-create-buffer): Check that buffers are still live
	before burying them (bug#18373).

2014-09-09  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries):
	Restore 24.3 display behavior.  (Bug#18381)

2014-09-09  Eli Zaretskii  <eliz@gnu.org>

	* mouse.el (mouse-drag-line): On text-mode frames, count the mode
	line and header line as 1 pixel.  This fixes the 1-"pixel" (row)
	discrepancy between window-pixel-edges and mouse events, and
	avoids moving mode line up when the mouse click is on the modeline
	and no drag is attempted.

2014-09-08  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-basic-setup):
	Avoid clobbering calendar with diary.  (Bug#18381)

2014-09-05  Stefan Monnier  <monnier@iro.umontreal.ca>
