@@ -1,3 +1,8 @@
+2014-10-01  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/package.el (package-import-keyring):
+	Create gnupg directory private.  (Bug#17625#155)
+
 2014-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/python.el (python-shell-completion-get-completions):
